// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot for memberslist 1`] = `
<table>
  <th>
    Avatar
  </th>
  <th>
    Name
  </th>
  <th>
    Username
  </th>
  <th>
    Role
  </th>
  <tr>
     
    <td>
      <img
        alt="Avatar"
        src="https://secure.gravatar.com/avatar/11b6eb38d8e618e9202a6f944526b065?s=80&d=identicon"
      />
       
    </td>
    <td>
      Cecilie Le Duc Dahl
       
    </td>
     
    <td>
      cldahl
       
    </td>
     
    <td>
      Maintainer
    </td>
  </tr>
  <tr>
     
    <td>
      <img
        alt="Avatar"
        src="https://secure.gravatar.com/avatar/b98569d860ff48aa6a8212857469a82e?s=80&d=identicon"
      />
       
    </td>
    <td>
      Jimmy Ngo Luong
       
    </td>
     
    <td>
      jimmynl
       
    </td>
     
    <td>
      Maintainer
    </td>
  </tr>
  <tr>
     
    <td>
      <img
        alt="Avatar"
        src="https://secure.gravatar.com/avatar/6845d366a85cc4850f6771518755afbf?s=80&d=identicon"
      />
       
    </td>
    <td>
      Lise Birgitte Ullevålseter
       
    </td>
     
    <td>
      lisebul
       
    </td>
     
    <td>
      Maintainer
    </td>
  </tr>
  <tr>
     
    <td>
      <img
        alt="Avatar"
        src="https://secure.gravatar.com/avatar/a877b6393c1fa870c6d3c4cb9c6f34d8?s=80&d=identicon"
      />
       
    </td>
    <td>
      Maintainer test token
       
    </td>
     
    <td>
      project_17464_bot
       
    </td>
     
    <td>
      Maintainer
    </td>
  </tr>
</table>
`;

exports[`Snapshot for memberslist, developer 1`] = `
<table>
  <th>
    Avatar
  </th>
  <th>
    Name
  </th>
  <th>
    Username
  </th>
  <th>
    Role
  </th>
  <tr>
     
    <td>
      <img
        alt="Avatar"
        src="https://secure.gravatar.com/avatar/e0b7100e71618df8efdd8d28f32410fc?s=80&d=identicon"
      />
       
    </td>
    <td>
      Annen devver
       
    </td>
     
    <td>
      group_28625_bot
       
    </td>
     
    <td>
      Developer
    </td>
  </tr>
  <tr>
     
    <td>
      <img
        alt="Avatar"
        src="https://secure.gravatar.com/avatar/e0b7100e71618df8efdd8d28f32410fc?s=80&d=identicon"
      />
       
    </td>
    <td>
      Jonatan devver
       
    </td>
     
    <td>
      group_28525_bot
       
    </td>
     
    <td>
      Developer
    </td>
  </tr>
</table>
`;
